# blog

./: .gitignore  README.md  pyproject.toml
blog/: README.md  urls.py  views.py
blog/blog/: settings.py
blog/posts/: forms.py  views.py
blog/posts/templates/posts/: post_list.html  post_new.html  post_page.html
blog/static/css/: style.css
blog/users/templates/users/: login.html
posts/: models.py  urls.py
templates/: about.html  base.html  home.html
users/: views.py
users/templates/users/: register.html
