[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["kwchun0520 <ckw05200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
